# sales-analyst

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: backend_pre_start.py  crud.py  initial_data.py  main.py  models.py  schemas.py  tests_pre_start.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 00215cb1afe6_initial_migration_with_new_reports_table.py  c4bbe7c0cbb6_initial_migration.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: login.py  orders.py  reports.py  upload.py
backend/app/api/services/: clean_data.py
backend/app/core/: config.py  db.py  security.py
backend/app/tests/: test_clean_data.py
backend/scripts/: prestart.sh  test.sh
backend/tests/: conftest.py
backend/tests/api/routes/: test_login.py  test_orders.py  test_reports.py  test_upload.py
backend/tests/api/services/: test_clean_data.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/utils/: seed_order_data.py  seed_upload_data.py  utils.py
frontend/: .gitignore  README.md  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  utils.ts  vite-env.d.ts
frontend/src/client/: index.ts  schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/client-axios/: index.ts  sdk.gen.ts
frontend/src/hooks/: useAuth.ts
frontend/src/routes/: __root.tsx  _layout.tsx  login.tsx
frontend/src/routes/_layout/: index.tsx  reports.tsx
scripts/: generate-client.sh
