[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "pwdlib>=0.3.0",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "sqlmodel>=0.0.38",
]
